# ar_proj

./: README.md
ar_plugin/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ar_plugin/catkin_ws/devel/lib/pkgconfig/: rosbagreadposeplugin.pc
ar_plugin/catkin_ws/devel/share/rosbagreadposeplugin/cmake/: rosbagreadposepluginConfig.cmake
ar_plugin/catkin_ws/src/camposplugin/: CMakeLists.txt  package.xml
ar_plugin/catkin_ws/src/camposplugin/include/header/: plugin.h
ar_plugin/catkin_ws/src/camposplugin/src/: main.cpp  plugin.cpp
ar_unity/: Assembly-CSharp.csproj  rosbagreadunity.userprefs
ar_unity/Assets/: scene1.unity
ar_unity/Assets/UnityChan/Models/Materials/: Left.mat
ar_unity/Assets/editor/: SpawnEditor.cs
ar_unity/Assets/ros_data/: poseData.txt  wallData.txt
ar_unity/Assets/transform/: objectData.txt  wallData.txt
ar_unity/ProjectSettings/: ProjectSettings.asset  TagManager.asset
ar_unity/third_Data/: globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
